Implemented a simple keyboard rendering routine. Improved the Note class. Some minor code cleaning.

--- a/PianoBizarre/PianoBizarre.vbproj
+++ b/PianoBizarre/PianoBizarre.vbproj
@@ -82,7 +82,7 @@
       <DependentUpon>FormMain.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GraphicKey.vb" />
+    <Compile Include="KeyRenderer.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
