--- a/SimpleSynth/packages.config
+++ b/SimpleSynth/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NAudio" version="1.8.0" targetFramework="net452" />
   <package id="ncalc" version="1.3.8" targetFramework="net452" />
 </packages>
